# nu_plugin_from_sse

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  from_sse.rs  lib.rs  main.rs  parser.rs  plugin.rs
src/nu/: mod.rs
