[package]
name = "nu_plugin_from_sse"
version = "0.2.0"
edition = "2021"

description = "Nushell plugin to convert a HTTP server sent event stream to structured data"
authors = ["Andy Gayton <andy@thecablelounge.com>"]
license = "MIT"
keywords = ["nushell", "plugin", "http", "nu", "server-sent-events"]
categories = ["command-line-utilities"]
repository = "https://github.com/cablehead/nu_plugin_from_sse"

[[bin]]
name = "nu_plugin_from_sse"

[dependencies]
nu-plugin = "0.92"
nu-protocol = { version = "0.92", features = ["plugin"] }
